--- a/index.html
+++ b/index.html
@@ -38,97 +38,71 @@
         b.addEventListener('click', function() {
             loveStory.innerText = '第一章：意外的邂逅\n' +
                 '\n' +
-                `${u}照例在早上七点准时推开"墨香咖啡馆"的玻璃门，清新的咖啡香气扑面而来。作为这家精品咖啡馆的首席咖啡师，他习惯在营业前两小时到店准备。今天他计划尝试一种新的咖啡豆烘焙曲线，这是他从哥伦比亚咖啡庄园特别带回的稀有品种。
-` +
+                u + '照例在早上七点准时推开"墨香咖啡馆"的玻璃门，清新的咖啡香气扑面而来。作为这家精品咖啡馆的首席咖啡师，他习惯在营业前两小时到店准备。今天他计划尝试一种新的咖啡豆烘焙曲线，这是他从哥伦比亚咖啡庄园特别带回的稀有品种。' +
                 '\n' +
-                `与此同时，${v}正站在咖啡馆对面的公交站台，咬着嘴唇查看手机导航。刚搬到这座城市不久的自由插画师，正在寻找一个适合工作的安静场所。她抬头看见"墨香咖啡馆"简约雅致的招牌，被橱窗里展示的手绘咖啡杯设计吸引，决定碰碰运气。
-` +
+                '与此同时，' + v + '正站在咖啡馆对面的公交站台，咬着嘴唇查看手机导航。刚搬到这座城市不久的自由插画师，正在寻找一个适合工作的安静场所。她抬头看见"墨香咖啡馆"简约雅致的招牌，被橱窗里展示的手绘咖啡杯设计吸引，决定碰碰运气。' +
                 '\n' +
-                `"欢迎光..."${u}抬头招呼，声音却戛然而止。站在柜台前的女孩穿着宽松的米色亚麻连衣裙，肩上挎着一个鼓鼓囊囊的帆布包，几缕不听话的栗色卷发从发髻中逃逸出来。最引人注目的是她右脸颊上的一小块水彩颜料痕迹，像是匆忙出门时忘记擦掉的创作痕迹。
-` +
+                '"欢迎光..."' + u + '抬头招呼，声音却戛然而止。站在柜台前的女孩穿着宽松的米色亚麻连衣裙，肩上挎着一个鼓鼓囊囊的帆布包，几缕不听话的栗色卷发从发髻中逃逸出来。最引人注目的是她右脸颊上的一小块水彩颜料痕迹，像是匆忙出门时忘记擦掉的创作痕迹。' +
                 '\n' +
-                `"你们...营业了吗？"${v}有些不确定地问，注意到咖啡师惊讶的目光，下意识摸了摸自己的脸。
-` +
+                '"你们...营业了吗？"' + v + '有些不确定地问，注意到咖啡师惊讶的目光，下意识摸了摸自己的脸。' +
                 '\n' +
                 '第二章：拿铁上的向日葵\n' +
                 '\n' +
-                `${u}回过神来，清了清嗓子："还有半小时才正式营业，不过我可以先为您做一杯咖啡。"他注意到女孩背包侧袋里露出的素描本和彩色铅笔，"您看起来需要个安静的地方工作？"
-` +
+                '' + u + '回过神来，清了清嗓子："还有半小时才正式营业，不过我可以先为您做一杯咖啡。"他注意到女孩背包侧袋里露出的素描本和彩色铅笔，"您看起来需要个安静的地方工作？"' +
                 '\n' +
-                `${v}眼睛一亮："你怎么知道？"她放下沉重的背包，"我正在赶一本儿童绘本的插图，家里太吵了——楼上在装修。"
-` +
+                '' + v + '眼睛一亮："你怎么知道？"她放下沉重的背包，"我正在赶一本儿童绘本的插图，家里太吵了——楼上在装修。"' +
                 '\n' +
-                `${u}微笑不语，转身开始准备咖啡。他决定尝试一种特殊的拉花技巧，将咖啡杯微微倾斜，让奶泡在表面形成独特的纹理。十五分钟后，他端上一杯拿铁——杯中的拉花不是常见的心形或树叶，而是一朵栩栩如生的向日葵。
-` +
+                '' + u + '微笑不语，转身开始准备咖啡。他决定尝试一种特殊的拉花技巧，将咖啡杯微微倾斜，让奶泡在表面形成独特的纹理。十五分钟后，他端上一杯拿铁——杯中的拉花不是常见的心形或树叶，而是一朵栩栩如生的向日葵。' +
                 '\n' +
-                `"哇！"${v}惊呼，立刻掏出手机拍照，"我从没见过这样的拉花！"她抬头看向${u}，"你是艺术家吗？"
-` +
+                '"哇！"' + v + '惊呼，立刻掏出手机拍照，"我从没见过这样的拉花！"她抬头看向' + u + '，"你是艺术家吗？"' +
                 '\n' +
-                `${u}耳尖微微发红："只是咖啡师。向日葵...比较适合清晨。"他指了指她脸上的颜料，"你才是真正的艺术家。"
-` +
+                '' + u + '耳尖微微发红："只是咖啡师。向日葵...比较适合清晨。"他指了指她脸上的颜料，"你才是真正的艺术家。"' +
                 '\n' +
-                `${v}这才意识到脸上的痕迹，尴尬地用手擦着："该死，我总这样...昨晚画到凌晨三点..."
-` +
+                '' + v + '这才意识到脸上的痕迹，尴尬地用手擦着："该死，我总这样...昨晚画到凌晨三点..."' +
                 '\n' +
                 '第三章：互补的灵魂\n' +
                 '\n' +
-                `接下来的两周，${v}成了咖啡馆的常客。她总是占据角落靠窗的位置，面前摊开素描本，时而皱眉思考，时而快速勾勒。${u}会不时送去新调的咖啡和小点心，偶尔偷瞄她的画作——充满童趣却又不失深度的动物形象让他印象深刻。
-` +
+                '接下来的两周，' + v + '成了咖啡馆的常客。她总是占据角落靠窗的位置，面前摊开素描本，时而皱眉思考，时而快速勾勒。' + u + '会不时送去新调的咖啡和小点心，偶尔偷瞄她的画作——充满童趣却又不失深度的动物形象让他印象深刻。' +
                 '\n' +
-                `一天下午，咖啡馆意外爆满，${v}主动提出帮忙收拾餐具。工作间隙，她好奇地问："为什么选择做咖啡师？"
-` +
+                '一天下午，咖啡馆意外爆满，' + v + '主动提出帮忙收拾餐具。工作间隙，她好奇地问："为什么选择做咖啡师？"' +
                 '\n' +
-                `${u}擦拭咖啡机的手顿了顿："我父亲是传统茶艺师，希望我继承家业。"他苦笑一下，"但我更喜欢咖啡的世界——每种豆子都有独特的故事，通过烘焙和萃取，能把这份故事传递给品尝的人。"
-` +
+                '' + u + '擦拭咖啡机的手顿了顿："我父亲是传统茶艺师，希望我继承家业。"他苦笑一下，"但我更喜欢咖啡的世界——每种豆子都有独特的故事，通过烘焙和萃取，能把这份故事传递给品尝的人。"' +
                 '\n' +
-                `${v}若有所思："就像我的画...每幅画都在讲述一个故事。"她犹豫片刻，从包里抽出一本绘本，"这是我第一本正式出版的作品...送给你。"
-` +
+                '' + v + '若有所思："就像我的画...每幅画都在讲述一个故事。"她犹豫片刻，从包里抽出一本绘本，"这是我第一本正式出版的作品...送给你。"' +
                 '\n' +
-                `${u}翻开书页，被细腻温暖的画风打动。他突然有了主意："我们咖啡馆每月都会举办小型艺术展...你愿意成为下个月的参展艺术家吗？"
-` +
+                '' + u + '翻开书页，被细腻温暖的画风打动。他突然有了主意："我们咖啡馆每月都会举办小型艺术展...你愿意成为下个月的参展艺术家吗？"' +
                 '\n' +
                 '第四章：雨夜的告白\n' +
                 '\n' +
-                `展览筹备期间，两人的关系迅速升温。${u}帮${v}设计展览布局，而她则教他简单的素描技巧。他们发现彼此对艺术的理解惊人地互补——${u}注重细节和技巧，${v}则擅长情感表达。
-` +
+                '展览筹备期间，两人的关系迅速升温。' + u + '帮' + v + '设计展览布局，而她则教他简单的素描技巧。他们发现彼此对艺术的理解惊人地互补——' + u + '注重细节和技巧，' + v + '则擅长情感表达。' +
                 '\n' +
-                `展览前夜，一场突如其来的暴雨打乱了计划。${v}焦急地看着被雨水打湿的几幅重要作品，眼眶发红："明天就要展出了..."
-` +
+                '展览前夜，一场突如其来的暴雨打乱了计划。' + v + '焦急地看着被雨水打湿的几幅重要作品，眼眶发红："明天就要展出了..."' +
                 '\n' +
-                `${u}二话不说，开车带她前往自己公寓，用专业画框和干燥设备抢救画作。当他们终于完成所有工作时，已是凌晨两点。疲惫但欣慰的两人坐在${u}的小阳台上，分享着一壶手冲咖啡。
-` +
+                '' + u + '二话不说，开车带她前往自己公寓，用专业画框和干燥设备抢救画作。当他们终于完成所有工作时，已是凌晨两点。疲惫但欣慰的两人坐在' + u + '的小阳台上，分享着一壶手冲咖啡。' +
                 '\n' +
-                `"为什么对我这么好？"${v}突然问道，声音轻得几乎被雨声淹没。
-` +
+                '"为什么对我这么好？"' + v + '突然问道，声音轻得几乎被雨声淹没。' +
                 '\n' +
-                `${u}放下咖啡杯，直视她的眼睛："因为你的画让我看到了世界的另一种可能...就像..."他停顿了一下，"就像我第一次见到你时做的向日葵拉花——明亮、温暖，让人忍不住想靠近。"
-` +
+                '' + u + '放下咖啡杯，直视她的眼睛："因为你的画让我看到了世界的另一种可能...就像..."他停顿了一下，"就像我第一次见到你时做的向日葵拉花——明亮、温暖，让人忍不住想靠近。"' +
                 '\n' +
-                `${v}笑了，眼中有泪光闪动："你知道吗？向日葵的花语是'沉默的爱'..."
-` +
+                '' + v + '笑了，眼中有泪光闪动："你知道吗？向日葵的花语是\'沉默的爱\'..."' +
                 '\n' +
                 '雨声中，两人的距离悄然缩短。\n' +
                 '\n' +
                 '第五章：咖啡与色彩的融合\n' +
                 '\n' +
-                `展览大获成功，${v}的作品引起了多家出版社的关注。与此同时，${u}收到国际咖啡师大赛的邀请函，但他犹豫不决——父亲突发心脏病住院，家中的茶艺馆需要人照料。
-` +
+                '展览大获成功，' + v + '的作品引起了多家出版社的关注。与此同时，' + u + '收到国际咖啡师大赛的邀请函，但他犹豫不决——父亲突发心脏病住院，家中的茶艺馆需要人照料。' +
                 '\n' +
-                `"去吧，"${v}握住他的手，"我帮你照顾茶艺馆。我父亲是中医，我可以请他给你爸爸看看。"
-` +
+                '"去吧，"' + v + '握住他的手，"我帮你照顾茶艺馆。我父亲是中医，我可以请他给你爸爸看看。"' +
                 '\n' +
-                `比赛当天，${u}凭借独创的"色彩萃取"技术获得冠军——他将${v}画作中的色彩灵感融入咖啡制作，创造出视觉与味觉的双重享受。领奖台上，他公开向观众席中的${v}表白："这杯冠军咖啡，献给我的缪斯。"
-` +
+                '比赛当天，' + u + '凭借独创的"色彩萃取"技术获得冠军——他将' + v + '画作中的色彩灵感融入咖啡制作，创造出视觉与味觉的双重享受。领奖台上，他公开向观众席中的' + v + '表白："这杯冠军咖啡，献给我的缪斯。"' +
                 '\n' +
-                `一年后，"墨香咖啡馆"旁开了一家小小的绘本工作室。${u}每天都会送去特制咖啡，杯中的拉花随着${v}的创作主题变化；而工作室的墙上，挂着一幅特别的画作——一个专注制作咖啡的年轻男子背影，画框下方写着："致我的咖啡师，我的爱人"。
-` +
+                '一年后，"墨香咖啡馆"旁开了一家小小的绘本工作室。' + u + '每天都会送去特制咖啡，杯中的拉花随着' + v + '的创作主题变化；而工作室的墙上，挂着一幅特别的画作——一个专注制作咖啡的年轻男子背影，画框下方写着："致我的咖啡师，我的爱人"。' +
                 '\n' +
                 '尾声\n' +
                 '\n' +
-                `某个周末的清晨，${u}发现咖啡馆门口排起了长队。原来${v}的新绘本《咖啡师与插画师的365天》成为畅销书，读者们慕名而来。人群中，一个年轻女孩指着菜单惊呼："妈妈，快看！书里的向日葵拿铁真的存在！"
-` +
+                '某个周末的清晨，' + u + '发现咖啡馆门口排起了长队。原来' + v + '的新绘本《咖啡师与插画师的365天》成为畅销书，读者们慕名而来。人群中，一个年轻女孩指着菜单惊呼："妈妈，快看！书里的向日葵拿铁真的存在！"' +
                 '\n' +
-                `${u}与${v}相视一笑，在咖啡香与色彩交织的世界里，他们找到了彼此最完美的味道。`;
+                '' + u + '与' + v + '相视一笑，在咖啡香与色彩交织的世界里，他们找到了彼此最完美的味道。';
         });
     </script>
 </body>
